# libag

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  libag.c  libag.h  test.c
ag_src/: config.h  config.h.in  ignore.c  main.c  options.c  options.h  search.c  search.h  util.c
bindings/: CMakeLists.txt
bindings/javascript/: CMakeLists.txt  README.md  libag_node.c  macros.h
bindings/javascript/examples/: init_config.js  simple.js
bindings/python/: CMakeLists.txt  README.md  libag.i
bindings/python/examples/: init_config.py  simple.py
doc/: libag.pc.in
doc/man3/: ag_finish.3  ag_free_all_results.3  ag_free_result.3  ag_get_stats.3  ag_init.3  ag_init_config.3  ag_search.3  ag_search_ts.3  ag_set_config.3  ag_start_workers.3  ag_stop_workers.3
examples/: init_config.c  simple.c
